--- a/index.html
+++ b/index.html
@@ -6,9 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Porfolio</h1>
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <a href="#">My Portfolio</a>
+            </div>
+            <div class="hamburger_menu"><img src="images/Union.png" alt=""></div>
+        </nav>
+    </header>
+    <main>
+
+    </main>
     
 </body>
 </html>
