header_and_main_section

--- a/index.html
+++ b/index.html
@@ -12,17 +12,38 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-            <div class="logo">
-                <a href="#">My Portfolio</a>
+    <section class="container">
+        <header>
+            <nav>
+                <div>
+                    <a href="#">My Logo</a>
+                </div>
+                <div class="hamburger_menu"><img src="images/Union.png" alt=""></div>
+            </nav>
+        </header>
+        <main>
+            <div>
+                <h1>
+                    I’m Chase Glad to see you!
+                </h1>
+                <p>
+                    I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+                </p>
             </div>
-            <div class="hamburger_menu"><img src="images/Union.png" alt=""></div>
-        </nav>
-    </header>
-    <main>
+            <h2>
+                LET’S CONNECT
+            </h2>
+            <ul>
+                <li><a style="width:19.99px; height: 19.96px;" href="#"><img src="images/socials-1.svg" alt=""></a></li>
+                <li><a style="width:20px; height: 20px;" href="#"><img src="images/socials-2.svg" alt=""></a></li>
+                <li><a style="width:20px; height: 16px;" href="#"><img src="images/socials-3.svg" alt=""></a></li>
+                <li><a style="width:17.99px; height: 20px;" href="#"><img src="images/socials-4.svg" alt=""></a></li>
+            </ul>
+    
+        </main>
 
-    </main>
+    </section>
+
     
 </body>
 </html>
