changes_on_html_and_css

--- a/index.html
+++ b/index.html
@@ -12,24 +12,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section class="container">
-        <header>
-            <nav>
-                <div>
-                    <a href="#">My Logo</a>
-                </div>
-                <div class="hamburger_menu"><img src="images/Union.png" alt=""></div>
-            </nav>
-        </header>
-        <main>
+    <header>
+        <nav>
             <div>
-                <h1>
-                    I’m Chase Glad to see you!
-                </h1>
-                <p>
-                    I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
-                </p>
+                <a href="#">My Logo</a>
             </div>
+            <div class="hamburger_menu"><img src="images/Union.png" alt=""></div>
+        </nav>
+    </header>
+    <main>
+        <section class="base_section">
+            <h1>
+                I’m Chase Glad to see you!
+            </h1>
+            <p>
+                I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+            </p>
             <h2>
                 LET’S CONNECT
             </h2>
@@ -40,9 +38,9 @@
                 <li><a style="width:17.99px; height: 20px;" href="#"><img src="images/socials-4.svg" alt=""></a></li>
             </ul>
     
-        </main>
+        </section>
 
-    </section>
+    </main>
 
     
 </body>
