work_section_first_card

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <p>
                 I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
             </p>
-            <h2>
+            <h3>
                 LET’S CONNECT
-            </h2>
+            </h3>
             <ul>
                 <li><a style="width:19.99px; height: 19.96px;" href="#"><img src="images/socials-1.svg" alt=""></a></li>
                 <li><a style="width:20px; height: 20px;" href="#"><img src="images/socials-2.svg" alt=""></a></li>
@@ -38,6 +38,39 @@
                 <li><a style="width:17.99px; height: 20px;" href="#"><img src="images/socials-4.svg" alt=""></a></li>
             </ul>
     
+        </section>
+        <section class="work_section">
+            <div class="card_container">
+                <div class="img_wrapper">
+                    <img src="images/card_img_1.svg" alt="">
+                </div>
+                <div class="details_wrapper">
+                    <h2>
+                        Tonic
+                    </h2>
+                    <div class="list_wrapper">
+                        <ul>
+                            <li class="canopy">CANOPY</li>
+                            <li class="back_end">Back End Dev</li>
+                            <li class="year">2015</li>
+                        </ul>
+                    </div>
+                    <p>
+                        A daily selection of privately personalized reads; no accounts or sign-ups required.
+                    </p>
+                    <div class="programing_languages_list">
+                        <ul>
+                            <li>html</li>
+                            <li>css</li>
+                            <li>javaScript</li>
+                        </ul>
+                    </div>
+                    <div class="button_wrapper">
+                        <button>See Project</button>
+                    </div>
+                </div>
+
+            </div>
         </section>
 
     </main>
