added_multiple_work_cards

--- a/index.html
+++ b/index.html
@@ -71,6 +71,99 @@
                 </div>
 
             </div>
+            <div class="card_container">
+                <div class="img_wrapper">
+                    <img src="images/card_img_2.svg" alt="">
+                </div>
+                <div class="details_wrapper">
+                    <h2 class="width_header_2">
+                        Multi-Post Stories
+                    </h2>
+                    <div class="list_wrapper">
+                        <ul>
+                            <li class="canopy">CANOPY</li>
+                            <li class="back_end">Back End Dev</li>
+                            <li class="year">2015</li>
+                        </ul>
+                    </div>
+                    <p>
+                        A daily selection of privately personalized reads; no accounts or sign-ups required.
+                    </p>
+                    <div class="programing_languages_list">
+                        <ul>
+                            <li>html</li>
+                            <li>css</li>
+                            <li>javaScript</li>
+                        </ul>
+                    </div>
+                    <div class="button_wrapper">
+                        <button>See Project</button>
+                    </div>
+                </div>
+
+            </div>
+            <div class="card_container">
+                <div class="img_wrapper">
+                    <img src="images/card_img_3.svg" alt="">
+                </div>
+                <div class="details_wrapper">
+                    <h2>
+                        Tonic
+                    </h2>
+                    <div class="list_wrapper">
+                        <ul>
+                            <li class="canopy">CANOPY</li>
+                            <li class="back_end">Back End Dev</li>
+                            <li class="year">2015</li>
+                        </ul>
+                    </div>
+                    <p>
+                        A daily selection of privately personalized reads; no accounts or sign-ups required.
+                    </p>
+                    <div class="programing_languages_list">
+                        <ul>
+                            <li>html</li>
+                            <li>css</li>
+                            <li>javaScript</li>
+                        </ul>
+                    </div>
+                    <div class="button_wrapper">
+                        <button>See Project</button>
+                    </div>
+                </div>
+
+            </div>
+            <div class="card_container">
+                <div class="img_wrapper">
+                    <img src="images/card_img_4.svg" alt="">
+                </div>
+                <div class="details_wrapper">
+                    <h2 class="width_header_2">
+                        Multi-Post Stories
+                    </h2>
+                    <div class="list_wrapper">
+                        <ul>
+                            <li class="canopy">CANOPY</li>
+                            <li class="back_end">Back End Dev</li>
+                            <li class="year">2015</li>
+                        </ul>
+                    </div>
+                    <p>
+                        A daily selection of privately personalized reads; no accounts or sign-ups required.
+                    </p>
+                    <div class="programing_languages_list">
+                        <ul>
+                            <li>html</li>
+                            <li>css</li>
+                            <li>javaScript</li>
+                        </ul>
+                    </div>
+                    <div class="button_wrapper">
+                        <button>See Project</button>
+                    </div>
+                </div>
+
+            </div>
         </section>
 
     </main>
