added_shadows_on_the_button

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <img src="images/card_img_2.svg" alt="">
                 </div>
                 <div class="details_wrapper">
-                    <h2 class="width_header_2">
+                    <h2 style="max-width: 200px; height: 80px;">
                         Multi-Post Stories
                     </h2>
                     <div class="list_wrapper">
@@ -138,7 +138,7 @@
                     <img src="images/card_img_4.svg" alt="">
                 </div>
                 <div class="details_wrapper">
-                    <h2 class="width_header_2">
+                    <h2 style="max-width: 200px; height: 80px;">
                         Multi-Post Stories
                     </h2>
                     <div class="list_wrapper">
