--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
             <p>
                 I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
             </p>
-            <h3>
+            <h4>
                 LET’S CONNECT
-            </h3>
+            </h4>
             <ul>
                 <li><a style="width:19.99px; height: 19.96px;" href="#"><img src="images/socials-1.svg" alt=""></a></li>
                 <li><a style="width:20px; height: 20px;" href="#"><img src="images/socials-2.svg" alt=""></a></li>
                 <li><a style="width:20px; height: 16px;" href="#"><img src="images/socials-3.svg" alt=""></a></li>
+                <li><a style="width: 17.99px; height: 20px;" href="#"><img src="images/socials-5.svg" alt=""></a></li>
                 <li><a style="width:17.99px; height: 20px;" href="#"><img src="images/socials-4.svg" alt=""></a></li>
             </ul>
     
@@ -164,6 +165,67 @@
                 </div>
 
             </div>
+        </section>
+        <section class="about_myself_section">
+            <h1>
+                About Myself
+            </h1>
+            <p>
+                Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+            </p>
+            <h4>
+                LET’S CONNECT
+            </h4>
+            <ul>
+                <li><a style="width: 17.99px; height: 20px;" href="#"><img src="images/socials-5.svg" alt=""></a></li>
+                <li><a style="width:20px; height: 20px;" href="#"><img src="images/socials-2.svg" alt=""></a></li>
+                <li><a style="width:17.99px; height: 20px;" href="#"><img src="images/socials-4.svg" alt=""></a></li>
+                <li><a style="width:19.99px; height: 19.96px;" href="#"><img src="images/socials-1.svg" alt=""></a></li>
+                <li><a style="width:20px; height: 16px;" href="#"><img src="images/socials-3.svg" alt=""></a></li>
+            </ul>
+            <div class="button_wrapper">
+                <button>Get my resume</button>
+            </div>
+            <div class="skills_wrap">
+                <div class="title_wrapper">
+                    <h3>
+                        Languages
+                    </h3>
+                    <img style="width: 16px; height: 16px; transform: rotate(90deg); " src="images/Union-1.svg" alt="">
+                </div>
+                <div class="language_wrapper">
+                    <div class="programing_languages_container">
+                        <img src="images/javascript.svg" alt="">
+                        <h5>JavaSript</h5>
+
+                    </div>
+                    <div class="programing_languages_container">
+                        <img src="images/html.svg" alt="">
+                        <h5>CSS</h5>
+
+                    </div>
+                    <div class="programing_languages_container">
+                        <img src="images/css.svg" alt="">
+                        <h5>HTML</h5>
+
+                    </div>
+                </div>
+                <div class="title_wrapper">
+                    <h3>
+                        Frameworks
+                    </h3>
+                    <img style="width: 16px; height: 16px; transform: rotate(360deg); " src="images/Union-1.svg" alt="">
+                </div>
+                <hr>
+                <div class="title_wrapper">
+                    <h3>
+                        Skills
+                    </h3>
+                    <img style="width: 16px; height: 16px; transform: rotate(360deg); " src="images/Union-1.svg" alt="">
+                </div>
+                <hr>
+            </div>
+
         </section>
 
     </main>
