Add boder radius, placeholder, and font color

--- a/index.html
+++ b/index.html
@@ -228,15 +228,15 @@
 
         </section>
         <section class="contact-page">
-            <div>
+            <div class="contact-title">
                 <h2>Contact me</h2>
                 <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
             </div>
           
-            <form action="">
+            <form action="" method="post">
                 <input type="text" name="name" placeholder="Full Name" maxlength="30" required>
                 <input type="email" name="email" placeholder="Your Email" required>
-                <textarea name="message" id="textarea" cols="30" rows="10" maxlength="500" required></textarea>
+                <textarea name="message" id="textarea" cols="30" rows="10" placeholder="Your message" maxlength="500" required></textarea>
                 <div class="button_wrapper">
                     <button>Get It Touch</button>
                 </div>
