--- a/index.html
+++ b/index.html
@@ -228,18 +228,20 @@
 
         </section>
         <section class="contact-page">
-            <div class="contact-title">
-                <h2 class="h2-white">Contact me</h2>
-                <p class="p-white">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
-            </div>
-            <form action="" method="post">
-                <input type="text" name="name" placeholder="Full Name" maxlength="30" required>
-                <input type="email" name="email" placeholder="Your Email" required>
-                <textarea name="message" id="textarea" cols="30" rows="10" placeholder="Your message" maxlength="500" required></textarea>
-                <div class="button_wrapper">
-                    <button class="button-white">Get It Touch</button>
+            <div class="contact_items_container">
+                <div class="contact-title">
+                    <h2 class="h2-white">Contact me</h2>
+                    <p class="p-white">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
                 </div>
-            </form>
+                <form action="https://formspree.io/f/mzbwnvzb" method="post">
+                    <input type="text" name="Name" id="name" placeholder="Full Name" maxlength="30" required>
+                    <input type="email" name="Email" id="email" placeholder="Your Email" required>
+                    <textarea name="message" id="textarea" cols="30" rows="10" placeholder="Your message" maxlength="500" required></textarea>
+                    <div class="button_wrapper">
+                        <button type="submit" class="button-white">Get It Touch</button>
+                    </div>
+                </form>
+            </div>
 
         </section>
 
