--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
             </div>
         </section>
         <section class="about_myself_section">
-            <h1>
+            <h2>
                 About Myself
-            </h1>
+            </h2>
             <p>
                 Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
             </p>
@@ -241,6 +241,9 @@
                         <button type="submit" class="button-white">Get It Touch</button>
                     </div>
                 </form>
+                <div class="home_indicator">
+                    <img src="images/Home Indicator/Shape.svg" alt="">
+                </div>
             </div>
 
         </section>
