Add homepage desktop size Add work_section desktop size Add about_myself desktop size Add contact_page desktop size Add grid position Add figma background templates Add images sizing

--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
                 <a href="#">My Logo</a>
             </div>
             <div class="hamburger_menu"><img src="images/Union.png" alt=""></div>
+            <ul>
+                <li>Portoflio</li>
+                <li>About</li>
+                <li>Contact</li>
+            </ul>
         </nav>
     </header>
     <main>
         <section class="base_section">
             <h1>
-                I’m Chase Glad to see you!
+                I’m Chase K Glad to see you!
             </h1>
             <p>
                 I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
@@ -167,24 +172,26 @@
             </div>
         </section>
         <section class="about_myself_section">
-            <h2>
-                About Myself
-            </h2>
-            <p>
-                Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
-            </p>
-            <h4>
-                LET’S CONNECT
-            </h4>
-            <ul>
-                <li><a style="width: 17.99px; height: 20px;" href="#"><img src="images/socials-5.svg" alt=""></a></li>
-                <li><a style="width:20px; height: 20px;" href="#"><img src="images/socials-2.svg" alt=""></a></li>
-                <li><a style="width:17.99px; height: 20px;" href="#"><img src="images/socials-4.svg" alt=""></a></li>
-                <li><a style="width:19.99px; height: 19.96px;" href="#"><img src="images/socials-1.svg" alt=""></a></li>
-                <li><a style="width:20px; height: 16px;" href="#"><img src="images/socials-3.svg" alt=""></a></li>
-            </ul>
-            <div class="button_wrapper">
-                <button>Get my resume</button>
+            <div class="about_myself_detail_wrapper">
+                <h2>
+                    About Myself
+                </h2>
+                <p>
+                    Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+                </p>
+                <h4>
+                    LET’S CONNECT
+                </h4>
+                <ul>
+                    <li><a style="width: 17.99px; height: 20px;" href="#"><img src="images/socials-5.svg" alt=""></a></li>
+                    <li><a style="width:20px; height: 20px;" href="#"><img src="images/socials-2.svg" alt=""></a></li>
+                    <li><a style="width:17.99px; height: 20px;" href="#"><img src="images/socials-4.svg" alt=""></a></li>
+                    <li><a style="width:19.99px; height: 19.96px;" href="#"><img src="images/socials-1.svg" alt=""></a></li>
+                    <li><a style="width:20px; height: 16px;" href="#"><img src="images/socials-3.svg" alt=""></a></li>
+                </ul>
+                <div class="button_wrapper">
+                    <button>Get my resume</button>
+                </div>
             </div>
             <div class="skills_wrap">
                 <div class="title_wrapper">
