Add Desktop text size Add desktop image sizing Add menu items Add figma template background images Align cards using grid

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <img src="images/card_img_2.svg" alt="">
                 </div>
                 <div class="details_wrapper">
-                    <h2 style="max-width: 200px; height: 80px;">
+                    <h2 class="h2-width">
                         Multi-Post Stories
                     </h2>
                     <div class="list_wrapper">
@@ -92,8 +92,11 @@
                             <li class="year">2015</li>
                         </ul>
                     </div>
-                    <p>
+                    <p class="mobile-screen">
                         A daily selection of privately personalized reads; no accounts or sign-ups required.
+                    </p>
+                    <p class="desktop-screen">
+                        Experimental content creation feature that allows users to add to an existing story over the course of a day without spamming their friends.
                     </p>
                     <div class="programing_languages_list">
                         <ul>
@@ -123,8 +126,11 @@
                             <li class="year">2015</li>
                         </ul>
                     </div>
-                    <p>
+                    <p class="mobile-screen">
                         A daily selection of privately personalized reads; no accounts or sign-ups required.
+                    </p>
+                    <p class="desktop-screen">
+                        Exploring the future of media in Facebook's first Virtual Reality app; a place to discover and enjoy 360 photos and videos on Gear VR.
                     </p>
                     <div class="programing_languages_list">
                         <ul>
@@ -144,7 +150,7 @@
                     <img src="images/card_img_4.svg" alt="">
                 </div>
                 <div class="details_wrapper">
-                    <h2 style="max-width: 200px; height: 80px;">
+                    <h2 class="h2-width">
                         Multi-Post Stories
                     </h2>
                     <div class="list_wrapper">
@@ -154,8 +160,11 @@
                             <li class="year">2015</li>
                         </ul>
                     </div>
-                    <p>
+                    <p class="mobile-screen">
                         A daily selection of privately personalized reads; no accounts or sign-ups required.
+                    </p>
+                    <p class="desktop-screen">
+                        A smart assistant to make driving more safe, efficient, and fun by unlocking your most expensive computer: your car.
                     </p>
                     <div class="programing_languages_list">
                         <ul>
