Add hover on menu items Add animation on socials icons Add hover on languages section

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                 LET’S CONNECT
             </h4>
             <ul>
-                <li class="social_icons_hover"><a style="width:19.99px; height: 19.96px;" href="#"><img src="images/socials-1.svg" alt=""></a></li>
-                <li class="social_icons_hover"><a style="width:20px; height: 20px;" href="#"><img src="images/socials-2.svg" alt=""></a></li>
-                <li class="social_icons_hover"><a style="width:20px; height: 16px;" href="#"><img src="images/socials-3.svg" alt=""></a></li>
-                <li class="social_icons_hover"><a style="width: 17.99px; height: 20px;" href="#"><img src="images/socials-5.svg" alt=""></a></li>
-                <li class="social_icons_hover"><a style="width:17.99px; height: 20px;" href="#"><img src="images/socials-4.svg" alt=""></a></li>
+                <li class="social_icons_hover socials-1"><a style="width:19.99px; height: 19.96px;" href="#"><img src="images/socials-1.svg" alt=""></a></li>
+                <li class="social_icons_hover socials-2"><a style="width:20px; height: 20px;" href="#"><img src="images/socials-2.svg" alt=""></a></li>
+                <li class="social_icons_hover socials-3"><a style="width:20px; height: 16px;" href="#"><img src="images/socials-3.svg" alt=""></a></li>
+                <li class="social_icons_hover socials-5"><a style="width: 17.99px; height: 20px;" href="#"><img src="images/socials-5.svg" alt=""></a></li>
+                <li class="social_icons_hover socials-4"><a style="width:17.99px; height: 20px;" href="#"><img src="images/socials-4.svg" alt=""></a></li>
             </ul>
     
         </section>
@@ -192,11 +192,11 @@
                     LET’S CONNECT
                 </h4>
                 <ul>
-                    <li class="social_icons_hover"><a style="width: 17.99px; height: 20px;" href="#"><img src="images/socials-5.svg" alt=""></a></li>
-                    <li class="social_icons_hover"><a style="width:20px; height: 20px;" href="#"><img src="images/socials-2.svg" alt=""></a></li>
-                    <li class="social_icons_hover"><a style="width:17.99px; height: 20px;" href="#"><img src="images/socials-4.svg" alt=""></a></li>
-                    <li class="social_icons_hover"><a style="width:19.99px; height: 19.96px;" href="#"><img src="images/socials-1.svg" alt=""></a></li>
-                    <li class="social_icons_hover"><a style="width:20px; height: 16px;" href="#"><img src="images/socials-3.svg" alt=""></a></li>
+                    <li class="social_icons_hover socials-1"><a style="width: 17.99px; height: 20px;" href="#"><img src="images/socials-5.svg" alt=""></a></li>
+                    <li class="social_icons_hover socials-2"><a style="width:20px; height: 20px;" href="#"><img src="images/socials-2.svg" alt=""></a></li>
+                    <li class="social_icons_hover socials-3"><a style="width:17.99px; height: 20px;" href="#"><img src="images/socials-4.svg" alt=""></a></li>
+                    <li class="social_icons_hover socials-5"><a style="width:19.99px; height: 19.96px;" href="#"><img src="images/socials-1.svg" alt=""></a></li>
+                    <li class="social_icons_hover socials-4"><a style="width:20px; height: 16px;" href="#"><img src="images/socials-3.svg" alt=""></a></li>
                 </ul>
                 <div class="button_wrapper">
                     <button>Get my resume</button>
