--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <div>
-                <a href="#">My Logo</a>
+                <a href="#">Chase K.</a>
             </div>
             <div class="hamburger_menu"><img src="images/Union.png" alt=""></div>
             <ul>
