Resolve issues on issues page Update live demo link Add space between section Add hover on the button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="hamburger_menu"><img src="images/Union.png" alt=""></div>
             <ul>
-                <li>Portoflio</li>
+                <li>Portfolio</li>
                 <li>About</li>
                 <li>Contact</li>
             </ul>
@@ -31,7 +31,7 @@
                 I’m Chase K Glad to see you!
             </h1>
             <p>
-                I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+                I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.
             </p>
             <h4>
                 LET’S CONNECT
@@ -45,6 +45,7 @@
             </ul>
     
         </section>
+
         <section class="work_section">
             <div class="card_container">
                 <div class="img_wrapper">
@@ -180,13 +181,14 @@
 
             </div>
         </section>
+
         <section class="about_myself_section">
             <div class="about_myself_detail_wrapper">
                 <h2>
                     About Myself
                 </h2>
                 <p>
-                    Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+                    Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.
                 </p>
                 <h4>
                     LET’S CONNECT
@@ -243,6 +245,7 @@
             </div>
 
         </section>
+        
         <section class="contact-page">
             <div class="contact_items_container">
                 <div class="contact-title">
