--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <body>
     <header>
         <nav>
-            <div>
+            <div class="logo">
                 <a href="#">Chase K.</a>
             </div>
             <div class="hamburger_menu"><img src="images/Union.png" alt=""></div>
             <ul>
-                <li>Portfolio</li>
-                <li>About</li>
-                <li>Contact</li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
             </ul>
         </nav>
     </header>
