--- a/index.html
+++ b/index.html
@@ -129,14 +129,28 @@
                     <h2 class="h2-white">Contact me</h2>
                     <p class="p-white">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
                 </div>
-                <form action="https://formspree.io/f/mzbwnvzb" method="post">
-                    <input type="text" name="Name" id="name" placeholder="Full Name" maxlength="30" required>
-                    <input type="email" name="Email" id="email" placeholder="Your Email" required>
-                    <textarea name="message" id="textarea" cols="30" rows="10" placeholder="Your message" maxlength="500" required></textarea>
-                    <div class="button_wrapper">
-                        <button type="submit" class="button-white">Get It Touch</button>
+                <form class="form" id="form" action="https://formspree.io/f/mzbwnvzb" method="post">
+
+                    <div class="mail_input_wrapper">
+                        <input type="text" name="Name" id="name" placeholder="Full Name" maxlength="30" required>
                     </div>
+
+                    <div class="mail_input_wrapper">
+                        <input type="email" name="Email" id="email" placeholder="Your Email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+                    </div>
+
+                    <textarea name="message" id="textarea" cols="30" rows="10" placeholder="Your message" maxlength="500" required></textarea>
+
+                    <div class="button_wrapper">
+                        <small id="alertmessage"></small>
+                        <button id="contact_button" type="submit" class="button-white">Get It Touch</button>
+                    </div>
+                    
                 </form>
+                <div class="submit_response error_hidden">
+                    Thank you for contacting me, I will get back to you ASAP.
+
+                </div>
                 <div class="home_indicator">
                     <img src="images/Home Indicator/Shape.svg" alt="">
                 </div>
