Add browser data preservation

--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
                 <form class="form" id="form" action="https://formspree.io/f/mzbwnvzb" method="post">
 
                     <div class="mail_input_wrapper">
-                        <input type="text" name="Name" id="name" placeholder="Full Name" maxlength="30" required>
+                        <input class="input_field" type="text" name="Name" id="name" placeholder="Full Name" maxlength="30" required>
                     </div>
 
                     <div class="mail_input_wrapper">
-                        <input type="email" name="Email" id="email" placeholder="Your Email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+                        <input class="input_field" type="email" name="Email" id="email" placeholder="Your Email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
                     </div>
 
-                    <textarea name="message" id="textarea" cols="30" rows="10" placeholder="Your message" maxlength="500" required></textarea>
+                    <textarea class="input_field" name="message" id="textarea" cols="30" rows="10" placeholder="Your message" maxlength="500" required></textarea>
 
                     <div class="button_wrapper">
                         <small id="alertmessage"></small>
