Add a new project to the porfolio

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="language_wrapper">
                     <div class="programing_languages_container">
                         <img src="images/javascript.svg" alt="">
-                        <h5>JavaSript</h5>
+                        <h5>JavaScript</h5>
 
                     </div>
                     <div class="programing_languages_container">
